test/pass/special0.min
program
    array x;
    string y
start
    x := 0;
    y := 0;
end

