test/fail/2atrib0.min
program start
    array a;
    string s;
    a := (s := 0); $$ (s := 0) is of type string
end
